--- a/src/main/resources/templates/forms/gerenciarFormularios.html
+++ b/src/main/resources/templates/forms/gerenciarFormularios.html
@@ -40,7 +40,7 @@
                     <div class="form-row overflow-auto">
                         <div th:switch="${forms}">
                             <h3 th:if="${forms.empty}">Sem Formulário, ainda.</h3>
-                            <table th:case="*"  class="table table-striped">
+                            <table th:if="${!forms.empty}" th:case="*"  class="table table-striped">
                                 <tr>
                                     <th id="colName0">Requisição</th>
                                     <th id="colName1">Data</th>
