ajustes na navegação

--- a/src/main/resources/templates/dash/gerenciarDash.html
+++ b/src/main/resources/templates/dash/gerenciarDash.html
@@ -52,7 +52,7 @@
                                         <td th:text="${cliente.nomeRazaoSocial}">...</td>
                                         <td th:text="${cliente.cnpj}">...</td>
                                         <td>
-                                            <a class="btn btn-primary" th:href="@{dash/{id}(id=${cliente.id})}"
+                                            <a class="btn btn-primary" th:href="@{~/dash/{id}(id=${cliente.id})}"
                                                 role="button">Visualizar</a>
                                         </td>
                                     </tr>
