--- a/src/main/resources/templates/clients/cadastroAdministrador.html
+++ b/src/main/resources/templates/clients/cadastroAdministrador.html
@@ -13,7 +13,10 @@
     <link rel="stylesheet" th:href="@{/css/menu.css}" type="text/css">
     <script th:src="@{/js/menu.js}" type="text/javascript"></script>
 
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
     <script th:src="@{/js/bootstrap/bootstrap.bundle.js}" type="text/javascript"></script>
 
     <title id="Title">Administrador</title>
@@ -42,8 +45,6 @@
                         </label>
                     </div>
 
-                    <div id="welcomeDiv" style="display:none;" class="answer_list"> WELCOME</div>
-                    <input type="button" name="answer" value="Show Div" onclick="showDiv()" />
                     <div class="form-row">
                         <div class="col-md mb-3">
                             <label for="nome">Nome </label>
@@ -51,7 +52,7 @@
                                 data-bs-content="Seu nome pessoal ou ficticio, o qual será utilizado para referi-lo.">?</button>
                             <!--is-valid-->
                             <input th:field="*{nome}" type="text" class="form-control lightMode" id="nome"
-                                placeholder="Empresa..." required>
+                                placeholder="Nome..." required>
                             <div class="valid-feedback">
                                 Nome válido!
                             </div>
@@ -134,12 +135,10 @@
                     </script>
                 </form>
             </div>
-            <script th:src="@{/js/cookies.js}" type="text/javascript">
-                function showDiv() {
-                    document.getElementById('welcomeDiv').style.display = "block";
-                }
-            </script>
+            
             <script>
+                $("#validationCNPJ").mask("00.000.000/0000-00");
+
                 function valida() {
                     // Fetch all the forms we want to apply custom Bootstrap validation styles to
                     var forms = document.querySelectorAll('.needs-validation')
