--- a/src/main/resources/templates/clients/cadastroCliente.html
+++ b/src/main/resources/templates/clients/cadastroCliente.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" th:href="@{/css/menu.css}" type="text/css">
     <script th:src="@{/js/menu.js}" type="text/javascript"></script>
 
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
     <script th:src="@{/js/bootstrap/bootstrap.bundle.js}" type="text/javascript"></script>
 
     <title id="Title">Cliente</title>
@@ -99,7 +98,7 @@
                         <div class="col-md mb-3">
                             <label for="validationCNPJ">CNPJ</label>
                             <input th:field="*{empresa.cnpj}" type="text" class="form-control lightMode"
-                                id="validationCNPJ" placeholder="XX.XXX.XXX/0001-XX" required>
+                                id="validationCNPJ" placeholder="XX.XXX.XXX/0001-XX" grequired>
                             <div class="valid-feedback">
                                 CNPJ válido!
                             </div>
@@ -182,6 +181,9 @@
                     </script>
                 </form>
             </div>
+
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
             <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
             <script th:src="@{/js/validationCliente.js}" type="text/javascript"></script>
 
