--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -26,7 +26,7 @@
                     <p>Você não tem autorização suficiente para acessar essa área</p>
                 </div>
                 <div class="form-row overflow-auto">
-                    <a class="btn btn-primary" href="./index.html" role="button" id="${data[i].id}">Início</a>
+                    <a class="btn btn-primary"  th:href="@{~/index.html}" role="button" id="${data[i].id}">Início</a>
                 </div>
             </div>
         </div>
