--- a/src/main/resources/templates/docker/gerenciarDocker.html
+++ b/src/main/resources/templates/docker/gerenciarDocker.html
@@ -33,7 +33,8 @@
                             <h1>Containers Docker</h1>
                         </div>
                         <div class="col-auto">
-                            <a class="btn btn-primary" href="./docker.html" role="button" id="cadastrarCliente">Novo</a>
+                            <a class="btn btn-primary" th:href="@{~/docker.html}" role="button"
+                                id="cadastrarCliente">Novo</a>
                         </div>
                     </div>
                     <div class="form-row overflow-auto">
